wowtoken/css/main.css
body {
    font-family: 'Roboto', sans-serif;
    font-weight: 400;
}

b {
    font-weight: 700;
}

h1, h2 {
    font-family: 'Roboto Slab', serif;
    font-weight: 700;
}

h1:first-child,
h2:first-child {
    margin-top: 0;
}

#trademarks {
    font-size: 75%;
    color: #999;
}

table.results {
    min-width: 270px;
}

table.results > tbody > tr > td {
    font-weight: 700;
    padding-top: 0.25em;
}

table.results > tbody > tr > td:first-child {
    font-weight: normal;
    padding-right: 2em;
}

table.results > tbody > tr:first-child > td {
    padding-top: 0;
}

table.results td.buy-price { font-size: 125% }

.mui-container {
    max-width: 970px;
}

a {
    white-space: nowrap;
}

#topcard {
    background-color: #FFD;
}

.realm-panel {
    background-color: #F6FFF6;
}

.extra-panel {
    background-color: #F6F6FF;
}

img.sparkline {
    float: right;
    width: 400px;
    height: 187px;
    max-width: 100%;
    border: 0;
}

@media all and (max-width: 768px) {
    img.sparkline {
        float: none;
        margin-bottom: 1em;
    }
}

div.hc {
    height: 400px;
}

.faq > li b:first-child {
    margin-right: 0.5em;
}

.faq > li {
    margin: 0.5em 0;
}

#topcard div.twitter {
    float: right;
}
#topcard div.twitter img {
    height: 15px;
    margin: 0 5px 0 15px;
}
@media all and (max-width: 400px) {
    #topcard div.twitter {
        display: none
    }
}

.notifications-allowed select {
    float: right;
}

.notifications-allowed div {
    margin-top: 10px;
}

.adsbygoogle {
    width: 320px;
    height: 100px;
    margin: 0 auto 20px;
}

@media (min-width:500px) {
    .adsbygoogle { width: 468px; height: 60px; }
}
@media (min-width:800px) {
    .adsbygoogle { width: 728px; height: 90px; }
}

.range-bar { position: relative; display: inline-block; margin: 0 10px; width: 10em; height: 1.2em; vertical-align: middle;
    /* Permalink - use to edit and share this gradient: http://colorzilla.com/gradient-editor/#3333cc+0,cc3333+100 */
    background: grey; /* Old browsers */
    background: -moz-linear-gradient(left, #3333cc 0%, #cc3333 100%); /* FF3.6-15 */
    background: -webkit-linear-gradient(left, #3333cc 0%,#cc3333 100%); /* Chrome10-25,Safari5.1-6 */
    background: linear-gradient(to right, #3333cc 0%,#cc3333 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#3333cc', endColorstr='#cc3333',GradientType=1 ); /* IE6-9 */
}
.range-point { position: absolute; display: inline-block; top: -0.5em; bottom: -0.5em; width: 0; border-left: 3px solid black; margin-left: -1.5px }

